--- a/week_1/package.json
+++ b/week_1/package.json
@@ -1,5 +1,18 @@
 {
-    "dependencies": {
-      "lodash": "^4.17.21"
-    }
+  "dependencies": {
+    "lodash": "^4.17.21"
+  },
+  "name": "week_1",
+  "version": "1.0.0",
+  "description": "just and example",
+  "main": "script.js",
+  "scripts": {
+    "start": "nodemon script.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
+}
